--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "recoil": "^0.7.4",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.1",
     "web-vitals": "^2.1.0"
